--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript">
+      const appDiv = document.getElementById("app");
+      const header = document.createElement("h1");
+
+      const text = "Ethan Gonzalez - Develop. Preview. Ship.";
+      const headerContent = document.createTextNode(text);
+
+      header.appendChild(headerContent);
+
+      appDiv.appendChild(header);
+    </script>
   </body>
 </html>
